--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
         "@types/uuid": "^8.3.4",
         "@vue/cli-plugin-router": "^5.0.8",
         "@vue/cli-service": "^5.0.8",
+        "eslint": "^8.27.0",
         "eslint-config-xo": "^0.42.0",
         "eslint-config-xo-typescript": "^0.53.0",
-        "eslint-plugin-vue": "^9.6.0",
+        "eslint-plugin-vue": "^9.7.0",
         "nodemon": "^2.0.20",
         "ts-node": "^10.6.0",
         "typescript": "^4.6.4",
@@ -54,7 +55,9 @@
                 "files": [
                     "**/*.ts"
                 ],
-                "excludedFiles": ["client/**"],
+                "excludedFiles": [
+                    "client/**"
+                ],
                 "extends": [
                     "xo",
                     "xo-typescript/space",
